// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WebsitePipelineStack (with notifications) synthetizes properly 1`] = `
"{
  \\"Resources\\": {
    \\"ProjectRole4CCB274E\\": {
      \\"Type\\": \\"AWS::IAM::Role\\",
      \\"Properties\\": {
        \\"AssumeRolePolicyDocument\\": {
          \\"Statement\\": [
            {
              \\"Action\\": \\"sts:AssumeRole\\",
              \\"Effect\\": \\"Allow\\",
              \\"Principal\\": {
                \\"Service\\": \\"codebuild.amazonaws.com\\"
              }
            }
          ],
          \\"Version\\": \\"2012-10-17\\"
        }
      }
    },
    \\"ProjectRoleDefaultPolicy7F29461B\\": {
      \\"Type\\": \\"AWS::IAM::Policy\\",
      \\"Properties\\": {
        \\"PolicyDocument\\": {
          \\"Statement\\": [
            {
              \\"Action\\": [
                \\"logs:CreateLogGroup\\",
                \\"logs:CreateLogStream\\",
                \\"logs:PutLogEvents\\"
              ],
              \\"Effect\\": \\"Allow\\",
              \\"Resource\\": [
                {
                  \\"Fn::Join\\": [
                    \\"\\",
                    [
                      \\"arn:\\",
                      {
                        \\"Ref\\": \\"AWS::Partition\\"
                      },
                      \\":logs:\\",
                      {
                        \\"Ref\\": \\"AWS::Region\\"
                      },
                      \\":\\",
                      {
                        \\"Ref\\": \\"AWS::AccountId\\"
                      },
                      \\":log-group:/aws/codebuild/\\",
                      {
                        \\"Ref\\": \\"ProjectC78D97AD\\"
                      }
                    ]
                  ]
                },
                {
                  \\"Fn::Join\\": [
                    \\"\\",
                    [
                      \\"arn:\\",
                      {
                        \\"Ref\\": \\"AWS::Partition\\"
                      },
                      \\":logs:\\",
                      {
                        \\"Ref\\": \\"AWS::Region\\"
                      },
                      \\":\\",
                      {
                        \\"Ref\\": \\"AWS::AccountId\\"
                      },
                      \\":log-group:/aws/codebuild/\\",
                      {
                        \\"Ref\\": \\"ProjectC78D97AD\\"
                      },
                      \\":*\\"
                    ]
                  ]
                }
              ]
            },
            {
              \\"Action\\": [
                \\"codebuild:CreateReportGroup\\",
                \\"codebuild:CreateReport\\",
                \\"codebuild:UpdateReport\\",
                \\"codebuild:BatchPutTestCases\\"
              ],
              \\"Effect\\": \\"Allow\\",
              \\"Resource\\": {
                \\"Fn::Join\\": [
                  \\"\\",
                  [
                    \\"arn:\\",
                    {
                      \\"Ref\\": \\"AWS::Partition\\"
                    },
                    \\":codebuild:\\",
                    {
                      \\"Ref\\": \\"AWS::Region\\"
                    },
                    \\":\\",
                    {
                      \\"Ref\\": \\"AWS::AccountId\\"
                    },
                    \\":report-group/\\",
                    {
                      \\"Ref\\": \\"ProjectC78D97AD\\"
                    },
                    \\"-*\\"
                  ]
                ]
              }
            },
            {
              \\"Action\\": [
                \\"s3:PutObject*\\",
                \\"s3:Abort*\\"
              ],
              \\"Effect\\": \\"Allow\\",
              \\"Resource\\": {
                \\"Fn::Join\\": [
                  \\"\\",
                  [
                    \\"arn:\\",
                    {
                      \\"Ref\\": \\"AWS::Partition\\"
                    },
                    \\":s3:::mydomain.com-website/*\\"
                  ]
                ]
              }
            },
            {
              \\"Action\\": \\"cloudfront:CreateInvalidation\\",
              \\"Effect\\": \\"Allow\\",
              \\"Resource\\": \\"*\\"
            },
            {
              \\"Action\\": [
                \\"s3:GetObject*\\",
                \\"s3:GetBucket*\\",
                \\"s3:List*\\",
                \\"s3:DeleteObject*\\",
                \\"s3:PutObject*\\",
                \\"s3:Abort*\\"
              ],
              \\"Effect\\": \\"Allow\\",
              \\"Resource\\": [
                {
                  \\"Fn::GetAtt\\": [
                    \\"Artifacts82DD59A1\\",
                    \\"Arn\\"
                  ]
                },
                {
                  \\"Fn::Join\\": [
                    \\"\\",
                    [
                      {
                        \\"Fn::GetAtt\\": [
                          \\"Artifacts82DD59A1\\",
                          \\"Arn\\"
                        ]
                      },
                      \\"/*\\"
                    ]
                  ]
                }
              ]
            }
          ],
          \\"Version\\": \\"2012-10-17\\"
        },
        \\"PolicyName\\": \\"ProjectRoleDefaultPolicy7F29461B\\",
        \\"Roles\\": [
          {
            \\"Ref\\": \\"ProjectRole4CCB274E\\"
          }
        ]
      }
    },
    \\"ProjectC78D97AD\\": {
      \\"Type\\": \\"AWS::CodeBuild::Project\\",
      \\"Properties\\": {
        \\"Artifacts\\": {
          \\"Type\\": \\"CODEPIPELINE\\"
        },
        \\"Environment\\": {
          \\"ComputeType\\": \\"BUILD_GENERAL1_SMALL\\",
          \\"Image\\": \\"aws/codebuild/nodejs:10.14.1\\",
          \\"PrivilegedMode\\": false,
          \\"Type\\": \\"LINUX_CONTAINER\\"
        },
        \\"ServiceRole\\": {
          \\"Fn::GetAtt\\": [
            \\"ProjectRole4CCB274E\\",
            \\"Arn\\"
          ]
        },
        \\"Source\\": {
          \\"BuildSpec\\": \\"{\\\\n  \\\\\\"version\\\\\\": \\\\\\"0.2\\\\\\",\\\\n  \\\\\\"phases\\\\\\": {\\\\n    \\\\\\"install\\\\\\": {\\\\n      \\\\\\"commands\\\\\\": [\\\\n        \\\\\\"npm install\\\\\\"\\\\n      ]\\\\n    },\\\\n    \\\\\\"build\\\\\\": {\\\\n      \\\\\\"commands\\\\\\": [\\\\n        \\\\\\"npm run test\\\\\\",\\\\n        \\\\\\"npm run build\\\\\\"\\\\n      ]\\\\n    },\\\\n    \\\\\\"post_build\\\\\\": {\\\\n      \\\\\\"commands\\\\\\": [\\\\n        \\\\\\"aws s3 cp --recursive --acl public-read ./dist s3://mydomain.com-website/\\\\\\",\\\\n        \\\\\\"aws s3 cp --acl public-read --cache-control=\\\\\\\\\\\\\\"max-age=0, no-cache, no-store, must-revalidate\\\\\\\\\\\\\\" ./dist/index.html s3://mydomain.com-website/\\\\\\",\\\\n        \\\\\\"aws cloudfront create-invalidation --distribution-id 1234567-0001234123 --paths /index.html\\\\\\"\\\\n      ]\\\\n    }\\\\n  },\\\\n  \\\\\\"artifacts\\\\\\": {\\\\n    \\\\\\"files\\\\\\": [\\\\n      \\\\\\"**/*\\\\\\"\\\\n    ],\\\\n    \\\\\\"base-directory\\\\\\": \\\\\\"dist\\\\\\"\\\\n  }\\\\n}\\",
          \\"Type\\": \\"CODEPIPELINE\\"
        }
      }
    },
    \\"Artifacts82DD59A1\\": {
      \\"Type\\": \\"AWS::S3::Bucket\\",
      \\"Properties\\": {
        \\"BucketName\\": \\"websitepipeline-artifacts\\"
      },
      \\"UpdateReplacePolicy\\": \\"Delete\\",
      \\"DeletionPolicy\\": \\"Delete\\"
    },
    \\"PipelineRoleD68726F7\\": {
      \\"Type\\": \\"AWS::IAM::Role\\",
      \\"Properties\\": {
        \\"AssumeRolePolicyDocument\\": {
          \\"Statement\\": [
            {
              \\"Action\\": \\"sts:AssumeRole\\",
              \\"Effect\\": \\"Allow\\",
              \\"Principal\\": {
                \\"Service\\": \\"codepipeline.amazonaws.com\\"
              }
            }
          ],
          \\"Version\\": \\"2012-10-17\\"
        }
      }
    },
    \\"PipelineRoleDefaultPolicyC7A05455\\": {
      \\"Type\\": \\"AWS::IAM::Policy\\",
      \\"Properties\\": {
        \\"PolicyDocument\\": {
          \\"Statement\\": [
            {
              \\"Action\\": [
                \\"s3:GetObject*\\",
                \\"s3:GetBucket*\\",
                \\"s3:List*\\",
                \\"s3:DeleteObject*\\",
                \\"s3:PutObject*\\",
                \\"s3:Abort*\\"
              ],
              \\"Effect\\": \\"Allow\\",
              \\"Resource\\": [
                {
                  \\"Fn::GetAtt\\": [
                    \\"Artifacts82DD59A1\\",
                    \\"Arn\\"
                  ]
                },
                {
                  \\"Fn::Join\\": [
                    \\"\\",
                    [
                      {
                        \\"Fn::GetAtt\\": [
                          \\"Artifacts82DD59A1\\",
                          \\"Arn\\"
                        ]
                      },
                      \\"/*\\"
                    ]
                  ]
                }
              ]
            },
            {
              \\"Action\\": \\"sts:AssumeRole\\",
              \\"Effect\\": \\"Allow\\",
              \\"Resource\\": {
                \\"Fn::GetAtt\\": [
                  \\"PipelineBuildBuildActionCodePipelineActionRoleBF1F5618\\",
                  \\"Arn\\"
                ]
              }
            }
          ],
          \\"Version\\": \\"2012-10-17\\"
        },
        \\"PolicyName\\": \\"PipelineRoleDefaultPolicyC7A05455\\",
        \\"Roles\\": [
          {
            \\"Ref\\": \\"PipelineRoleD68726F7\\"
          }
        ]
      }
    },
    \\"PipelineC660917D\\": {
      \\"Type\\": \\"AWS::CodePipeline::Pipeline\\",
      \\"Properties\\": {
        \\"RoleArn\\": {
          \\"Fn::GetAtt\\": [
            \\"PipelineRoleD68726F7\\",
            \\"Arn\\"
          ]
        },
        \\"Stages\\": [
          {
            \\"Actions\\": [
              {
                \\"ActionTypeId\\": {
                  \\"Category\\": \\"Source\\",
                  \\"Owner\\": \\"ThirdParty\\",
                  \\"Provider\\": \\"GitHub\\",
                  \\"Version\\": \\"1\\"
                },
                \\"Configuration\\": {
                  \\"Owner\\": \\"cpmech\\",
                  \\"Repo\\": \\"myrepo\\",
                  \\"Branch\\": \\"master\\",
                  \\"OAuthToken\\": \\"{{resolve:ssm:gh-token-path:1}}\\",
                  \\"PollForSourceChanges\\": false
                },
                \\"Name\\": \\"SourceAction\\",
                \\"OutputArtifacts\\": [
                  {
                    \\"Name\\": \\"Artifact_Source_SourceAction\\"
                  }
                ],
                \\"RunOrder\\": 1
              }
            ],
            \\"Name\\": \\"Source\\"
          },
          {
            \\"Actions\\": [
              {
                \\"ActionTypeId\\": {
                  \\"Category\\": \\"Build\\",
                  \\"Owner\\": \\"AWS\\",
                  \\"Provider\\": \\"CodeBuild\\",
                  \\"Version\\": \\"1\\"
                },
                \\"Configuration\\": {
                  \\"ProjectName\\": {
                    \\"Ref\\": \\"ProjectC78D97AD\\"
                  }
                },
                \\"InputArtifacts\\": [
                  {
                    \\"Name\\": \\"Artifact_Source_SourceAction\\"
                  }
                ],
                \\"Name\\": \\"BuildAction\\",
                \\"OutputArtifacts\\": [
                  {
                    \\"Name\\": \\"Artifact_Build_BuildAction\\"
                  }
                ],
                \\"RoleArn\\": {
                  \\"Fn::GetAtt\\": [
                    \\"PipelineBuildBuildActionCodePipelineActionRoleBF1F5618\\",
                    \\"Arn\\"
                  ]
                },
                \\"RunOrder\\": 1
              }
            ],
            \\"Name\\": \\"Build\\"
          }
        ],
        \\"ArtifactStore\\": {
          \\"Location\\": {
            \\"Ref\\": \\"Artifacts82DD59A1\\"
          },
          \\"Type\\": \\"S3\\"
        },
        \\"RestartExecutionOnUpdate\\": true
      },
      \\"DependsOn\\": [
        \\"PipelineRoleDefaultPolicyC7A05455\\",
        \\"PipelineRoleD68726F7\\"
      ]
    },
    \\"PipelineSourceSourceActionWebhookResource8BAFEA1A\\": {
      \\"Type\\": \\"AWS::CodePipeline::Webhook\\",
      \\"Properties\\": {
        \\"Authentication\\": \\"GITHUB_HMAC\\",
        \\"AuthenticationConfiguration\\": {
          \\"SecretToken\\": \\"{{resolve:ssm:gh-token-path:1}}\\"
        },
        \\"Filters\\": [
          {
            \\"JsonPath\\": \\"$.ref\\",
            \\"MatchEquals\\": \\"refs/heads/{Branch}\\"
          }
        ],
        \\"TargetAction\\": \\"SourceAction\\",
        \\"TargetPipeline\\": {
          \\"Ref\\": \\"PipelineC660917D\\"
        },
        \\"TargetPipelineVersion\\": 1,
        \\"RegisterWithThirdParty\\": true
      }
    },
    \\"PipelineBuildBuildActionCodePipelineActionRoleBF1F5618\\": {
      \\"Type\\": \\"AWS::IAM::Role\\",
      \\"Properties\\": {
        \\"AssumeRolePolicyDocument\\": {
          \\"Statement\\": [
            {
              \\"Action\\": \\"sts:AssumeRole\\",
              \\"Effect\\": \\"Allow\\",
              \\"Principal\\": {
                \\"AWS\\": {
                  \\"Fn::Join\\": [
                    \\"\\",
                    [
                      \\"arn:\\",
                      {
                        \\"Ref\\": \\"AWS::Partition\\"
                      },
                      \\":iam::\\",
                      {
                        \\"Ref\\": \\"AWS::AccountId\\"
                      },
                      \\":root\\"
                    ]
                  ]
                }
              }
            }
          ],
          \\"Version\\": \\"2012-10-17\\"
        }
      }
    },
    \\"PipelineBuildBuildActionCodePipelineActionRoleDefaultPolicy27F22ECB\\": {
      \\"Type\\": \\"AWS::IAM::Policy\\",
      \\"Properties\\": {
        \\"PolicyDocument\\": {
          \\"Statement\\": [
            {
              \\"Action\\": [
                \\"codebuild:BatchGetBuilds\\",
                \\"codebuild:StartBuild\\",
                \\"codebuild:StopBuild\\"
              ],
              \\"Effect\\": \\"Allow\\",
              \\"Resource\\": {
                \\"Fn::GetAtt\\": [
                  \\"ProjectC78D97AD\\",
                  \\"Arn\\"
                ]
              }
            }
          ],
          \\"Version\\": \\"2012-10-17\\"
        },
        \\"PolicyName\\": \\"PipelineBuildBuildActionCodePipelineActionRoleDefaultPolicy27F22ECB\\",
        \\"Roles\\": [
          {
            \\"Ref\\": \\"PipelineBuildBuildActionCodePipelineActionRoleBF1F5618\\"
          }
        ]
      }
    },
    \\"PipelineOnPipelineStateChangeECB00445\\": {
      \\"Type\\": \\"AWS::Events::Rule\\",
      \\"Properties\\": {
        \\"EventPattern\\": {
          \\"detail\\": {
            \\"state\\": [
              \\"STARTED\\",
              \\"FAILED\\",
              \\"SUCCEEDED\\"
            ]
          },
          \\"source\\": [
            \\"aws.codepipeline\\"
          ],
          \\"resources\\": [
            {
              \\"Fn::Join\\": [
                \\"\\",
                [
                  \\"arn:\\",
                  {
                    \\"Ref\\": \\"AWS::Partition\\"
                  },
                  \\":codepipeline:\\",
                  {
                    \\"Ref\\": \\"AWS::Region\\"
                  },
                  \\":\\",
                  {
                    \\"Ref\\": \\"AWS::AccountId\\"
                  },
                  \\":\\",
                  {
                    \\"Ref\\": \\"PipelineC660917D\\"
                  }
                ]
              ]
            }
          ],
          \\"detail-type\\": [
            \\"CodePipeline Pipeline Execution State Change\\"
          ]
        },
        \\"State\\": \\"ENABLED\\",
        \\"Targets\\": [
          {
            \\"Arn\\": {
              \\"Ref\\": \\"WebsitePipelinePNCTopic757DE90F\\"
            },
            \\"Id\\": \\"Target0\\",
            \\"InputTransformer\\": {
              \\"InputPathsMap\\": {
                \\"detail-pipeline\\": \\"$.detail.pipeline\\",
                \\"detail-state\\": \\"$.detail.state\\"
              },
              \\"InputTemplate\\": \\"\\\\\\"Pipeline <detail-pipeline> changed state to <detail-state>\\\\\\"\\"
            }
          }
        ]
      }
    },
    \\"WebsitePipelinePNCTopic757DE90F\\": {
      \\"Type\\": \\"AWS::SNS::Topic\\",
      \\"Properties\\": {
        \\"TopicName\\": \\"WebsitePipeline-notifications\\"
      }
    },
    \\"WebsitePipelinePNCTopiclistenermonitorcomF6E796FB\\": {
      \\"Type\\": \\"AWS::SNS::Subscription\\",
      \\"Properties\\": {
        \\"Protocol\\": \\"email\\",
        \\"TopicArn\\": {
          \\"Ref\\": \\"WebsitePipelinePNCTopic757DE90F\\"
        },
        \\"Endpoint\\": \\"listener@monitor.com\\"
      }
    },
    \\"WebsitePipelinePNCTopicadminmydomaincom2F5A7B8F\\": {
      \\"Type\\": \\"AWS::SNS::Subscription\\",
      \\"Properties\\": {
        \\"Protocol\\": \\"email\\",
        \\"TopicArn\\": {
          \\"Ref\\": \\"WebsitePipelinePNCTopic757DE90F\\"
        },
        \\"Endpoint\\": \\"admin@mydomain.com\\"
      }
    },
    \\"WebsitePipelinePNCTopicPolicyFEC7474B\\": {
      \\"Type\\": \\"AWS::SNS::TopicPolicy\\",
      \\"Properties\\": {
        \\"PolicyDocument\\": {
          \\"Statement\\": [
            {
              \\"Action\\": \\"sns:Publish\\",
              \\"Effect\\": \\"Allow\\",
              \\"Principal\\": {
                \\"Service\\": \\"events.amazonaws.com\\"
              },
              \\"Resource\\": {
                \\"Ref\\": \\"WebsitePipelinePNCTopic757DE90F\\"
              },
              \\"Sid\\": \\"0\\"
            }
          ],
          \\"Version\\": \\"2012-10-17\\"
        },
        \\"Topics\\": [
          {
            \\"Ref\\": \\"WebsitePipelinePNCTopic757DE90F\\"
          }
        ]
      }
    }
  }
}"
`;

exports[`WebsitePipelineStack synthetizes properly 1`] = `
"{
  \\"Resources\\": {
    \\"ProjectRole4CCB274E\\": {
      \\"Type\\": \\"AWS::IAM::Role\\",
      \\"Properties\\": {
        \\"AssumeRolePolicyDocument\\": {
          \\"Statement\\": [
            {
              \\"Action\\": \\"sts:AssumeRole\\",
              \\"Effect\\": \\"Allow\\",
              \\"Principal\\": {
                \\"Service\\": \\"codebuild.amazonaws.com\\"
              }
            }
          ],
          \\"Version\\": \\"2012-10-17\\"
        }
      }
    },
    \\"ProjectRoleDefaultPolicy7F29461B\\": {
      \\"Type\\": \\"AWS::IAM::Policy\\",
      \\"Properties\\": {
        \\"PolicyDocument\\": {
          \\"Statement\\": [
            {
              \\"Action\\": [
                \\"logs:CreateLogGroup\\",
                \\"logs:CreateLogStream\\",
                \\"logs:PutLogEvents\\"
              ],
              \\"Effect\\": \\"Allow\\",
              \\"Resource\\": [
                {
                  \\"Fn::Join\\": [
                    \\"\\",
                    [
                      \\"arn:\\",
                      {
                        \\"Ref\\": \\"AWS::Partition\\"
                      },
                      \\":logs:\\",
                      {
                        \\"Ref\\": \\"AWS::Region\\"
                      },
                      \\":\\",
                      {
                        \\"Ref\\": \\"AWS::AccountId\\"
                      },
                      \\":log-group:/aws/codebuild/\\",
                      {
                        \\"Ref\\": \\"ProjectC78D97AD\\"
                      }
                    ]
                  ]
                },
                {
                  \\"Fn::Join\\": [
                    \\"\\",
                    [
                      \\"arn:\\",
                      {
                        \\"Ref\\": \\"AWS::Partition\\"
                      },
                      \\":logs:\\",
                      {
                        \\"Ref\\": \\"AWS::Region\\"
                      },
                      \\":\\",
                      {
                        \\"Ref\\": \\"AWS::AccountId\\"
                      },
                      \\":log-group:/aws/codebuild/\\",
                      {
                        \\"Ref\\": \\"ProjectC78D97AD\\"
                      },
                      \\":*\\"
                    ]
                  ]
                }
              ]
            },
            {
              \\"Action\\": [
                \\"codebuild:CreateReportGroup\\",
                \\"codebuild:CreateReport\\",
                \\"codebuild:UpdateReport\\",
                \\"codebuild:BatchPutTestCases\\"
              ],
              \\"Effect\\": \\"Allow\\",
              \\"Resource\\": {
                \\"Fn::Join\\": [
                  \\"\\",
                  [
                    \\"arn:\\",
                    {
                      \\"Ref\\": \\"AWS::Partition\\"
                    },
                    \\":codebuild:\\",
                    {
                      \\"Ref\\": \\"AWS::Region\\"
                    },
                    \\":\\",
                    {
                      \\"Ref\\": \\"AWS::AccountId\\"
                    },
                    \\":report-group/\\",
                    {
                      \\"Ref\\": \\"ProjectC78D97AD\\"
                    },
                    \\"-*\\"
                  ]
                ]
              }
            },
            {
              \\"Action\\": [
                \\"s3:PutObject*\\",
                \\"s3:Abort*\\"
              ],
              \\"Effect\\": \\"Allow\\",
              \\"Resource\\": {
                \\"Fn::Join\\": [
                  \\"\\",
                  [
                    \\"arn:\\",
                    {
                      \\"Ref\\": \\"AWS::Partition\\"
                    },
                    \\":s3:::mydomain.com-website/*\\"
                  ]
                ]
              }
            },
            {
              \\"Action\\": \\"cloudfront:CreateInvalidation\\",
              \\"Effect\\": \\"Allow\\",
              \\"Resource\\": \\"*\\"
            },
            {
              \\"Action\\": [
                \\"s3:GetObject*\\",
                \\"s3:GetBucket*\\",
                \\"s3:List*\\",
                \\"s3:DeleteObject*\\",
                \\"s3:PutObject*\\",
                \\"s3:Abort*\\"
              ],
              \\"Effect\\": \\"Allow\\",
              \\"Resource\\": [
                {
                  \\"Fn::GetAtt\\": [
                    \\"Artifacts82DD59A1\\",
                    \\"Arn\\"
                  ]
                },
                {
                  \\"Fn::Join\\": [
                    \\"\\",
                    [
                      {
                        \\"Fn::GetAtt\\": [
                          \\"Artifacts82DD59A1\\",
                          \\"Arn\\"
                        ]
                      },
                      \\"/*\\"
                    ]
                  ]
                }
              ]
            }
          ],
          \\"Version\\": \\"2012-10-17\\"
        },
        \\"PolicyName\\": \\"ProjectRoleDefaultPolicy7F29461B\\",
        \\"Roles\\": [
          {
            \\"Ref\\": \\"ProjectRole4CCB274E\\"
          }
        ]
      }
    },
    \\"ProjectC78D97AD\\": {
      \\"Type\\": \\"AWS::CodeBuild::Project\\",
      \\"Properties\\": {
        \\"Artifacts\\": {
          \\"Type\\": \\"CODEPIPELINE\\"
        },
        \\"Environment\\": {
          \\"ComputeType\\": \\"BUILD_GENERAL1_SMALL\\",
          \\"EnvironmentVariables\\": [
            {
              \\"Name\\": \\"APP_NAME\\",
              \\"Type\\": \\"PLAINTEXT\\",
              \\"Value\\": \\"myapp\\"
            },
            {
              \\"Name\\": \\"VERSION\\",
              \\"Type\\": \\"PLAINTEXT\\",
              \\"Value\\": \\"1.0\\"
            }
          ],
          \\"Image\\": \\"aws/codebuild/nodejs:10.14.1\\",
          \\"PrivilegedMode\\": false,
          \\"Type\\": \\"LINUX_CONTAINER\\"
        },
        \\"ServiceRole\\": {
          \\"Fn::GetAtt\\": [
            \\"ProjectRole4CCB274E\\",
            \\"Arn\\"
          ]
        },
        \\"Source\\": {
          \\"BuildSpec\\": \\"{\\\\n  \\\\\\"version\\\\\\": \\\\\\"0.2\\\\\\",\\\\n  \\\\\\"phases\\\\\\": {\\\\n    \\\\\\"install\\\\\\": {\\\\n      \\\\\\"commands\\\\\\": [\\\\n        \\\\\\"curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | sudo apt-key add -\\\\\\",\\\\n        \\\\\\"echo \\\\\\\\\\\\\\"deb https://dl.yarnpkg.com/debian/ stable main\\\\\\\\\\\\\\" | tee /etc/apt/sources.list.d/yarn.list\\\\\\",\\\\n        \\\\\\"sudo apt-get update && sudo apt-get install yarn\\\\\\",\\\\n        \\\\\\"yarn\\\\\\"\\\\n      ]\\\\n    },\\\\n    \\\\\\"build\\\\\\": {\\\\n      \\\\\\"commands\\\\\\": [\\\\n        \\\\\\"yarn test\\\\\\",\\\\n        \\\\\\"yarn build\\\\\\"\\\\n      ]\\\\n    },\\\\n    \\\\\\"post_build\\\\\\": {\\\\n      \\\\\\"commands\\\\\\": [\\\\n        \\\\\\"aws s3 cp --recursive --acl public-read ./dist s3://mydomain.com-website/\\\\\\",\\\\n        \\\\\\"aws s3 cp --acl public-read --cache-control=\\\\\\\\\\\\\\"max-age=0, no-cache, no-store, must-revalidate\\\\\\\\\\\\\\" ./dist/index.html s3://mydomain.com-website/\\\\\\",\\\\n        \\\\\\"aws cloudfront create-invalidation --distribution-id 1234567-0001234123 --paths /index.html\\\\\\"\\\\n      ]\\\\n    }\\\\n  },\\\\n  \\\\\\"artifacts\\\\\\": {\\\\n    \\\\\\"files\\\\\\": [\\\\n      \\\\\\"**/*\\\\\\"\\\\n    ],\\\\n    \\\\\\"base-directory\\\\\\": \\\\\\"dist\\\\\\"\\\\n  }\\\\n}\\",
          \\"Type\\": \\"CODEPIPELINE\\"
        }
      }
    },
    \\"Artifacts82DD59A1\\": {
      \\"Type\\": \\"AWS::S3::Bucket\\",
      \\"Properties\\": {
        \\"BucketName\\": \\"websitepipeline-artifacts\\"
      },
      \\"UpdateReplacePolicy\\": \\"Delete\\",
      \\"DeletionPolicy\\": \\"Delete\\"
    },
    \\"PipelineRoleD68726F7\\": {
      \\"Type\\": \\"AWS::IAM::Role\\",
      \\"Properties\\": {
        \\"AssumeRolePolicyDocument\\": {
          \\"Statement\\": [
            {
              \\"Action\\": \\"sts:AssumeRole\\",
              \\"Effect\\": \\"Allow\\",
              \\"Principal\\": {
                \\"Service\\": \\"codepipeline.amazonaws.com\\"
              }
            }
          ],
          \\"Version\\": \\"2012-10-17\\"
        }
      }
    },
    \\"PipelineRoleDefaultPolicyC7A05455\\": {
      \\"Type\\": \\"AWS::IAM::Policy\\",
      \\"Properties\\": {
        \\"PolicyDocument\\": {
          \\"Statement\\": [
            {
              \\"Action\\": [
                \\"s3:GetObject*\\",
                \\"s3:GetBucket*\\",
                \\"s3:List*\\",
                \\"s3:DeleteObject*\\",
                \\"s3:PutObject*\\",
                \\"s3:Abort*\\"
              ],
              \\"Effect\\": \\"Allow\\",
              \\"Resource\\": [
                {
                  \\"Fn::GetAtt\\": [
                    \\"Artifacts82DD59A1\\",
                    \\"Arn\\"
                  ]
                },
                {
                  \\"Fn::Join\\": [
                    \\"\\",
                    [
                      {
                        \\"Fn::GetAtt\\": [
                          \\"Artifacts82DD59A1\\",
                          \\"Arn\\"
                        ]
                      },
                      \\"/*\\"
                    ]
                  ]
                }
              ]
            },
            {
              \\"Action\\": \\"sts:AssumeRole\\",
              \\"Effect\\": \\"Allow\\",
              \\"Resource\\": {
                \\"Fn::GetAtt\\": [
                  \\"PipelineBuildBuildActionCodePipelineActionRoleBF1F5618\\",
                  \\"Arn\\"
                ]
              }
            }
          ],
          \\"Version\\": \\"2012-10-17\\"
        },
        \\"PolicyName\\": \\"PipelineRoleDefaultPolicyC7A05455\\",
        \\"Roles\\": [
          {
            \\"Ref\\": \\"PipelineRoleD68726F7\\"
          }
        ]
      }
    },
    \\"PipelineC660917D\\": {
      \\"Type\\": \\"AWS::CodePipeline::Pipeline\\",
      \\"Properties\\": {
        \\"RoleArn\\": {
          \\"Fn::GetAtt\\": [
            \\"PipelineRoleD68726F7\\",
            \\"Arn\\"
          ]
        },
        \\"Stages\\": [
          {
            \\"Actions\\": [
              {
                \\"ActionTypeId\\": {
                  \\"Category\\": \\"Source\\",
                  \\"Owner\\": \\"ThirdParty\\",
                  \\"Provider\\": \\"GitHub\\",
                  \\"Version\\": \\"1\\"
                },
                \\"Configuration\\": {
                  \\"Owner\\": \\"cpmech\\",
                  \\"Repo\\": \\"myrepo\\",
                  \\"Branch\\": \\"master\\",
                  \\"OAuthToken\\": \\"{{resolve:ssm:gh-token-path:1}}\\",
                  \\"PollForSourceChanges\\": false
                },
                \\"Name\\": \\"SourceAction\\",
                \\"OutputArtifacts\\": [
                  {
                    \\"Name\\": \\"Artifact_Source_SourceAction\\"
                  }
                ],
                \\"RunOrder\\": 1
              }
            ],
            \\"Name\\": \\"Source\\"
          },
          {
            \\"Actions\\": [
              {
                \\"ActionTypeId\\": {
                  \\"Category\\": \\"Build\\",
                  \\"Owner\\": \\"AWS\\",
                  \\"Provider\\": \\"CodeBuild\\",
                  \\"Version\\": \\"1\\"
                },
                \\"Configuration\\": {
                  \\"ProjectName\\": {
                    \\"Ref\\": \\"ProjectC78D97AD\\"
                  }
                },
                \\"InputArtifacts\\": [
                  {
                    \\"Name\\": \\"Artifact_Source_SourceAction\\"
                  }
                ],
                \\"Name\\": \\"BuildAction\\",
                \\"OutputArtifacts\\": [
                  {
                    \\"Name\\": \\"Artifact_Build_BuildAction\\"
                  }
                ],
                \\"RoleArn\\": {
                  \\"Fn::GetAtt\\": [
                    \\"PipelineBuildBuildActionCodePipelineActionRoleBF1F5618\\",
                    \\"Arn\\"
                  ]
                },
                \\"RunOrder\\": 1
              }
            ],
            \\"Name\\": \\"Build\\"
          }
        ],
        \\"ArtifactStore\\": {
          \\"Location\\": {
            \\"Ref\\": \\"Artifacts82DD59A1\\"
          },
          \\"Type\\": \\"S3\\"
        },
        \\"RestartExecutionOnUpdate\\": true
      },
      \\"DependsOn\\": [
        \\"PipelineRoleDefaultPolicyC7A05455\\",
        \\"PipelineRoleD68726F7\\"
      ]
    },
    \\"PipelineSourceSourceActionWebhookResource8BAFEA1A\\": {
      \\"Type\\": \\"AWS::CodePipeline::Webhook\\",
      \\"Properties\\": {
        \\"Authentication\\": \\"GITHUB_HMAC\\",
        \\"AuthenticationConfiguration\\": {
          \\"SecretToken\\": \\"{{resolve:ssm:gh-token-path:1}}\\"
        },
        \\"Filters\\": [
          {
            \\"JsonPath\\": \\"$.ref\\",
            \\"MatchEquals\\": \\"refs/heads/{Branch}\\"
          }
        ],
        \\"TargetAction\\": \\"SourceAction\\",
        \\"TargetPipeline\\": {
          \\"Ref\\": \\"PipelineC660917D\\"
        },
        \\"TargetPipelineVersion\\": 1,
        \\"RegisterWithThirdParty\\": true
      }
    },
    \\"PipelineBuildBuildActionCodePipelineActionRoleBF1F5618\\": {
      \\"Type\\": \\"AWS::IAM::Role\\",
      \\"Properties\\": {
        \\"AssumeRolePolicyDocument\\": {
          \\"Statement\\": [
            {
              \\"Action\\": \\"sts:AssumeRole\\",
              \\"Effect\\": \\"Allow\\",
              \\"Principal\\": {
                \\"AWS\\": {
                  \\"Fn::Join\\": [
                    \\"\\",
                    [
                      \\"arn:\\",
                      {
                        \\"Ref\\": \\"AWS::Partition\\"
                      },
                      \\":iam::\\",
                      {
                        \\"Ref\\": \\"AWS::AccountId\\"
                      },
                      \\":root\\"
                    ]
                  ]
                }
              }
            }
          ],
          \\"Version\\": \\"2012-10-17\\"
        }
      }
    },
    \\"PipelineBuildBuildActionCodePipelineActionRoleDefaultPolicy27F22ECB\\": {
      \\"Type\\": \\"AWS::IAM::Policy\\",
      \\"Properties\\": {
        \\"PolicyDocument\\": {
          \\"Statement\\": [
            {
              \\"Action\\": [
                \\"codebuild:BatchGetBuilds\\",
                \\"codebuild:StartBuild\\",
                \\"codebuild:StopBuild\\"
              ],
              \\"Effect\\": \\"Allow\\",
              \\"Resource\\": {
                \\"Fn::GetAtt\\": [
                  \\"ProjectC78D97AD\\",
                  \\"Arn\\"
                ]
              }
            }
          ],
          \\"Version\\": \\"2012-10-17\\"
        },
        \\"PolicyName\\": \\"PipelineBuildBuildActionCodePipelineActionRoleDefaultPolicy27F22ECB\\",
        \\"Roles\\": [
          {
            \\"Ref\\": \\"PipelineBuildBuildActionCodePipelineActionRoleBF1F5618\\"
          }
        ]
      }
    }
  }
}"
`;
